[workspace]
members = [
    # "cli",
    # "geyser-grpc-plugin-client",
    "jito-geyser-protos",
    "yellowstone-grpc-proto",
    "yellowstone-grpc-client",
    "geyser_subscriber",
    # "server"
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "2.0.15"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]
edition = "2021"
repository = "https://github.com/jito-foundation/geyser-grpc-plugin"
homepage = "https://jito.network/"

[workspace.dependencies]
agave-geyser-plugin-interface = "=2.2"
bincode = "1.3.3"
bs58 = "0.5.0"
clap = { version = "4", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
enum-iterator = "2.1.0"
futures-util = "0.3.28"
geyser-grpc-plugin-client = { path = "geyser-grpc-plugin-client", version = "=2.0.15" }
jito-geyser-protos = { path = "jito-geyser-protos", version = "=2.0.15" }
log = "0.4.17"
lru = "0.13.0"
once_cell = "1.17.1"
prost = "0.13.5"
prost-types = "0.13.5"
protobuf-src = "1.1.0+21.5"
serde = "1"
serde_derive = "1.0.160"
serde_json = "1.0.96"
serde_with = "=3.12.0"
serde_yaml = "0.9"
solana-account-decoder = "=2.2"
solana-logger = "=2.2"
solana-metrics = "=2.2"
solana-program = "=2.2"
solana-sdk = "=2.2"
solana-client = "=2.2"
solana-transaction-status = "=2.2"
solana-vote-program = "=2.2"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls", "tls-native-roots", "tls-webpki-roots"] }
tonic-build = "0.12.3"
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
bytes = "1.3.0"
prost_011 = { package = "prost", version = "0.11.9" }
smallvec = "1.13.2"
solana-storage-proto = "~2.2.1"
spl-token-2022 = "6.0.0"
criterion = "0.5.1"
anyhow = "1.0.62"
futures = "0.3.24"
tonic-health = "0.12.1"
yellowstone-grpc-client = { path = "yellowstone-grpc-client", version = "6.1.0" }
yellowstone-grpc-proto = { path = "yellowstone-grpc-proto", version = "6.1.0", default-features = false }
maplit = "1.0.2"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

