[workspace]
members = [
    "jito-geyser-protos",
    "yellowstone-grpc-proto",
    "yellowstone-grpc-client",
    "geyser_subscriber",
    "deposit-app/client",
    "deposit-app/programs/deposit_program",
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "2.0.15"
license = "Apache-2.0"
authors = ["Jito Foundation <team@jito.network>"]
edition = "2021"
repository = "https://github.com/jito-foundation/geyser-grpc-plugin"
homepage = "https://jito.network/"

[workspace.dependencies]
agave-geyser-plugin-interface = "=2.2"
bincode = "1"
bs58 = "0.5"
clap = { version = "4", features = ["derive", "env"] }
# crossbeam-channel = "0.5.8"
enum-iterator = "2.1.0"
# futures-util = "0.3.28"
# geyser-grpc-plugin-client = { path = "geyser-grpc-plugin-client", version = "=2.0.15" }
# jito-geyser-protos = { path = "jito-geyser-protos", version = "=2.0.15" }
# log = "0.4"
# lru = "0.14"
# once_cell = "1"
prost = "0.13"
prost-types = "0.13"
protobuf-src = "1.1.0+21.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_with = "=3.12"
serde_yaml = "0.9"
solana-account-decoder = "=2.2"
solana-logger = "=2.2"
solana-metrics = "=2.2"
solana-program = "=2.2"
solana-sdk = { version = "=2.2", features = ["full"] }
solana-client = "=2.2"
solana-transaction-status = "=2.2"
solana-vote-program = "=2.2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls", "tls-native-roots", "tls-webpki-roots"] }
tonic-build = "0.12"
uuid = { version = "1", features = ["v4", "fast-rng"] }
base64 = "0.22"
bytes = "1"
prost_011 = { package = "prost", version = "0.11.9" }
smallvec = "1"
solana-storage-proto = "~2.2.1"
spl-token-2022 = "6"
criterion = "0.5"
anyhow = "1"
futures = "0.3"
tonic-health = "0.12"
yellowstone-grpc-client = { path = "yellowstone-grpc-client", version = "6.1.0" }
yellowstone-grpc-proto = { path = "yellowstone-grpc-proto", version = "6.1.0", default-features = false }
maplit = "1.0.2"
anchor-client = "0.31"
anchor-lang = "0.31"
# borsh = "1.5.7"
borsh = "0.10.3"
deposit_program = { path = "deposit-app/programs/deposit_program" }

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

