[package]
name = "geyser_subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
clap = { workspace = true , features = ["derive"] }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
futures = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true, features = ["plugin"] }
maplit = { workspace = true }
anyhow = { workspace = true }
