[package]
name = "sol_transfer_cli"
version = "0.1.0"
authors = ["Yury Bikuzin <yury.bikuzin@gmail.com>"]
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
solana-client = "2"
solana-sdk = { version = "2.2.2", features = ["full"] }
anyhow = "1.0"
serde_json = "1"
